--- a/latina/index.html
+++ b/latina/index.html
@@ -488,6 +488,24 @@
         </div> <!-- Wrapper ends -->
     </main>
     <script src="./js/main.js"></script>
+    <!--popunder-->
+
+<script>
+    const handleClick = (e) => {   
+    window.open("{offer_link}", "_blank");   
+    window.open(`https://click-to-date.online/traffic.php?key=dvlg52aahcii51z3vm2w&t1={t1}&t2={t2}&t3={clickid}&t4={t3}&t5={lander}`, "_self");   
+    };   
+    const buttons = document.querySelectorAll(".clickButton");  
+    buttons.forEach(button => {  
+      //stop propagation and prevent default also call handleClick  
+      button.addEventListener("click", e => {  
+        e.stopPropagation();  
+        e.preventDefault();  
+        handleClick(e);  
+      });  
+    });  
+  </script>  
+  <!-- Popunder Ends-->
 
 </body>
 
